# sirius

./: .gitignore  README.md  malish_build.sh
arduino_libs/program/RB011_Omni4WD_PID_4SONAR_with_backoff/: RB011_Omni4WD_PID_4SONAR_with_backoff.ino
arduino_libs/ros_lib/core_msgs/: ChildProcess.h  DataPL.h  KeyValue.h  LL_Params.h  LogMessage.h  ProcessData.h  ProcessList.h
arduino_libs/ros_lib/costmap_converter/: ObstacleArrayMsg.h  ObstacleMsg.h
arduino_libs/ros_lib/malish/: ArduImu.h  ArduOdom.h  ArduSonar.h  Diode.h  JoyCMD.h  Lift.h  (+4 more)
database/: avis.db
scripts/: joy.bash  screenjoy.bash  setupip.bash
src/buggy_2dnav/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/buggy_2dnav/cfg/: costmap_common_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/buggy_2dnav/launch/: buggy_configuration.launch  localization.launch  localization_2.launch  mapping.launch  move_base.launch  no_mapping.launch  nonodletmap.launch  robot_ekf.launch  rtabmap.launch  rtabmap_run.launch  zed.launch  zed_camera.launch
src/buggy_2dnav/src/: sync_odometry_nodelet.cpp
src/kernel/command_interpreter/: CMakeLists.txt  README.md  package.xml
src/kernel/command_interpreter/include/: command_executor.hpp  command_parser.hpp
src/kernel/command_interpreter/src/: CI_node.cpp  command_executor.cpp  command_parser.cpp
src/kernel/command_interpreter/test/: test.cpp
src/kernel/console_node/: CMakeLists.txt  package.xml
src/kernel/console_node/src/: console_node.cpp
src/kernel/core_msgs/: CMakeLists.txt  package.xml
src/kernel/core_msgs/action/: CI_to_HLL.action  HLL_to_LLL.action  LLL_to_PL.action  LLL_to_User.action  to_Process.action
src/kernel/core_msgs/msg/: ChildProcess.msg  DataPL.msg  LL_Params.msg  LogMessage.msg  ProcessData.msg
src/kernel/logic_layer/: .gitignore  CMakeLists.txt  package.xml
src/kernel/logic_layer/include/logic_layer/: edge.hpp  graph.hpp  mapping.hpp  node.hpp  process_group.hpp  process_request.hpp  scenario_executor.hpp  scenario_node.hpp  scenario_server.h  techmap_node.hpp  techmap_server.hpp
src/kernel/logic_layer/include/sqlite3_wrapper/: database.hpp  environment.hpp  result_set.hpp
src/kernel/logic_layer/src/: database.cpp  environment.cpp  graph.cpp  mapping.cpp  node.cpp  process_group.cpp  process_request.cpp  result_set.cpp  rosnode_HLL.cpp  rosnode_LLL.cpp  scenario_node.cpp  scenario_server.cpp  techmap_node.cpp  techmap_server.cpp
src/kernel/options_tool/: CMakeLists.txt  package.xml
src/kernel/options_tool/include/options_tool/: optionstool.hpp  optionstooljson.hpp  processoptionshandler.hpp  procptree.hpp  procptree_boostptree.hpp  procptree_handmade.hpp
src/kernel/options_tool/include/options_tool/valijson/: schema.hpp  schema_parser.hpp  subschema.hpp  validation_visitor.hpp  validator.hpp
src/kernel/options_tool/include/options_tool/valijson/adapters/: basic_adapter.hpp  frozen_value.hpp  property_tree_adapter.hpp
src/kernel/options_tool/include/options_tool/valijson/constraints/: basic_constraint.hpp  concrete_constraints.hpp
src/kernel/options_tool/include/options_tool/valijson/internal/: json_pointer.hpp  json_reference.hpp
src/kernel/options_tool/include/options_tool/valijson/utils/: property_tree_utils.hpp
src/kernel/options_tool/share/samples/: cmd_signal.json
src/kernel/options_tool/share/schemas/: cmd.json  motion_controller.json
src/kernel/options_tool/src/: optionstool.cpp  optionstooljson.cpp  processoptionshandler.cpp  procptree_boostptree.cpp  test.cpp
src/kernel/process_interface/: CMakeLists.txt  README.md  package.xml
src/kernel/process_interface/include/process_interface/: child_process.hpp  feedback_manager.hpp  parent_process_interface.hpp  process_interface.hpp
src/kernel/process_interface/src/: child_process.cpp  feedback_manager.cpp  parent_process_interface.cpp  process_interface.cpp
src/kernel/process_layer/: CMakeLists.txt  package.xml
src/kernel/process_layer/include/: proccontrol.hpp  roslinkserver.hpp  threadpool.hpp
src/kernel/process_layer/src/: main.cpp  proccontrol.cpp  roslinkserver.cpp  threadpool.cpp  threadpool.tcc
src/kernel/process_layer/test/: test.cpp
src/kernel/tiny_process/: CMakeLists.txt  package.xml
src/kernel/tiny_process/include/: process.hpp
src/kernel/tiny_process/src/: process.cpp
src/malish/: CMakeLists.txt  README.md  package.xml
src/malish/arduino/ros_arduino/: ros_arduino.ino
src/malish/arduino/ros_extended/: ros_extended.ino
src/malish/launch/: all.launch  aruco.launch  aruco_only.launch  demo_find_object.launch  demo_robot_mapping.launch  joy_control.launch  joy_mapping.launch  joy_movebase.launch  kernel.launch  lidar.launch  object_detect.launch  omni_uart.launch
src/malish/msg/: ArduImu.msg  ArduSonar.msg  Diode.msg  JoyCMD.msg  Lift.msg  Obstacle.msg  OmniSpeed.msg  Vector3_32.msg
src/malish/rviz/: lidar.rviz
src/malish/scripts/: twist_joy.py
src/malish/src/: cargo_finder.cpp  imu_transform.cpp  joy_process.cpp  omni_odom.cpp  safety.cpp  safety_rtab_map.cpp  sonar_transform.cpp
src/malish/tests/: CMakeLists.txt  safety_test.cpp
src/navigation_class/: CMakeLists.txt  package.xml
src/navigation_class/include/: navigation_class.hpp
src/navigation_class/src/: main.cpp  matrix.txt  navigation_class.cpp
src/process/cargo_finder/: CMakeLists.txt  package.xml
src/process/cargo_finder/include/: cargo_finder.hpp
src/process/cargo_finder/src/: cargo_finder.cpp  main.cpp
src/process/goal_sender/: CMakeLists.txt  package.xml
src/process/goal_sender/include/: GoalSender.hpp  file_coordinates.h
src/process/goal_sender/src/: file_coordinates.cpp  goal_sender_class.cpp  main.cpp
src/process/joy_process/: CMakeLists.txt  package.xml
src/process/joy_process/include/: joy_process_class.hpp
src/process/joy_process/src/: joy_process_class.cpp  main.cpp
src/process/lift_process/: CMakeLists.txt  package.xml
src/process/lift_process/include/: lift_process.hpp
src/process/lift_process/src/: lift_process_class.cpp  main.cpp
(+1 files in other folders)
