<?xml version="1.0"?>
<package>
  <name>core_msgs</name>
  <version>0.0.0</version>
  <description>The core_msgs package</description>

  <maintainer email="vladislav@todo.todo">vladislav</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>