<?xml version="1.0"?>
<package>
  <name>process_interface</name>
  <version>0.0.0</version>
  <description>process_template</description>

  <maintainer email="omnissi@todo.todo">omnissi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>core_msgs</build_depend>
  <build_depend>tiny_process</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>core_msgs</run_depend>
  <run_depend>tiny_process</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>